# english_as_code

./: .gitignore  README.md  pyproject.toml
editor/: .env  README.md  __init__.py
editor/backend/: __init__.py  main.py
editor/fixtures/: unpaid_invoices.xlsx
editor/fixtures/data/: accounts_receivable.xlsx  data.xlsx
editor/frontend/: app.js  index.html
grammar/: eac.ebnf  keywords.yaml  sentence_templates.yaml
scripts/: setup_venv.sh
src/eac/: __init__.py  ast_nodes.py  cli.py  errors.py  ir.py  lexer.py  lowering.py  parser.py  type_checker.py
src/eac/runtime/: __init__.py  interpreter.py
src/eac/runtime/tools/: __init__.py  excel.py  web.py
tests/: conftest.py  test_cli.py  test_lexer.py  test_lowering.py  test_parser.py  test_runtime.py  test_type_checker.py
tests/examples/: aging_report.eac  erp_invoice_post.eac  reconciliation.eac
